OLMIS-1605: Add audit log support
This commit introduces support for basic audit logging. In order to show this feature, it associates WidgetRepository with JaVers so that changes persisted to Widgets are logged. It also adds an endpoint at /api/widgets/{id}/auditLog to retrieve a list of these changes.
