# src/main/java/org/openlmis/template/web/WidgetController.java
@@ -5,12 +5,14 @@ import org.openlmis.template.repository.WidgetRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.UUID;
@@ -19,8 +21,7 @@ import java.util.UUID;
  * Controller used to expose Widgets via HTTP.
  */
 @RestController
-@RequestMapping("/api")
-public class WidgetController {
+public class WidgetController extends BaseController{
 
   private static final Logger LOGGER = LoggerFactory.getLogger(WidgetController.class);
 
@@ -31,7 +32,7 @@ public class WidgetController {
    * Allows the creation of a new widget. If the id is specified, it will be ignored.
    */
   @RequestMapping(value = "/widgets", method = RequestMethod.POST)
-  public ResponseEntity createFacility(@RequestBody Widget widget) {
+  public ResponseEntity createWidget(@RequestBody Widget widget) {
     LOGGER.debug("Creating new widget");
     Widget newWidget = widgetRepository.save(widget);
     return new ResponseEntity(newWidget, HttpStatus.CREATED);
@@ -86,6 +87,38 @@ public class WidgetController {
       return new ResponseEntity(widget, HttpStatus.OK);
     }
   }
+
+  /**
+   * Retrieves audit information related to the specified widget.
+   *
+   * @param author The author of the changes which should be returned.
+   *               If null or empty, changes are returned regardless of author.
+   * @param changedPropertyName The name of the property about which changes should be returned.
+   *               If null or empty, changes associated with any and all properties are returned.
+   * @param page A Pageable object that allows client to optionally add "page" (page number)
+   *             and "size" (page size) query parameters to the request.
+   */
+  @RequestMapping(value = "/widgets/{id}/auditLog", method = RequestMethod.GET)
+  public ResponseEntity<?> getWidgetAuditLog(
+          @PathVariable("id") UUID id,
+          @RequestParam(name = "author", required = false, defaultValue = "") String author,
+          @RequestParam(name = "changedPropertyName", required = false, defaultValue = "")
+                  String changedPropertyName,
+          //Because JSON is all we formally support, returnJSON is excluded from our JavaDoc
+          @RequestParam(name = "returnJSON", required = false, defaultValue = "true")
+                  boolean returnJson,
+          Pageable page) {
+
+    //Return a 404 if the specified widget can't be found
+    Widget widget = widgetRepository.findOne(id);
+    if (widget == null) {
+      return handleNotFound();
+    }
+
+    String auditData = getAuditLog(Widget.class, id, author, changedPropertyName, page, returnJson);
+    return ResponseEntity.status(HttpStatus.OK).body(auditData);
+  }
+
 
   private ResponseEntity<?> handleNotFound()
   {
